force-app/main/default/objects/Session_Protocol__c/Session_Protocol__c.object-meta.xml
<CustomObject>
    <label>Session Protocol</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Session Protocol Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Protocols</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>