force-app/main/default/objects/Session_Protocol__c/fields/Add_to_Plan__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to Plan</label>
    <type>Checkbox</type>
</CustomField>