force-app/main/default/objects/Session_Protocol__c/fields/Aggressive_Movement__c.field-meta.xml
<CustomField>
    <fullName>Aggressive_Movement__c</fullName>
    <label>Aggressive - Movement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Stayed in place</fullName>
            </value>
            <value>
                <fullName>2. Retreated or leaned away</fullName>
            </value>
            <value>
                <fullName>3. Moved toward target</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>