force-app/main/default/objects/Session_Protocol__c/fields/Aggressive_Movement_Number__c.field-meta.xml
<CustomField>
    <fullName>Aggressive_Movement_Number__c</fullName>
    <formula>VALUE(LEFT(TEXT(Aggressive_Movement__c),1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aggressive - Movement (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>