force-app/main/default/objects/Session_Protocol__c/fields/Aggressive_Worst__c.field-meta.xml
<CustomField>
    <fullName>Aggressive_Worst__c</fullName>
    <label>Aggressive - Worst</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. None Observed</fullName>
            </value>
            <value>
                <fullName>2. Hard stare, whale eye, rigid, freezes</fullName>
            </value>
            <value>
                <fullName>3. Head whips, lifts lip, growls or alarm barks</fullName>
            </value>
            <value>
                <fullName>4. Air snaps or muzzle punches</fullName>
            </value>
            <value>
                <fullName>5. Tries to bite or bites</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>