force-app/main/default/objects/Session_Protocol__c/fields/Arousal_Best_Number__c.field-meta.xml
<CustomField>
    <fullName>Arousal_Best_Number__c</fullName>
    <formula>VALUE(LEFT(TEXT(Arousal_Best__c),1))</formula>
    <label>Arousal - Best (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>