force-app/main/default/objects/Session_Protocol__c/fields/Fear_Best__c.field-meta.xml
<CustomField>
    <fullName>Fear_Best__c</fullName>
    <label>Fear - Best</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>1. Excited, playful, interested</fullName>
            </value>
            <value>
                <fullName>2. Neutral</fullName>
            </value>
            <value>
                <fullName>2. Mildly fearful</fullName>
            </value>
            <value>
                <fullName>3. Moderately fearful</fullName>
            </value>
            <value>
                <fullName>4. Extremely fearful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>