force-app/main/default/objects/Session_Protocol__c/fields/Fear_Worst_Number__c.field-meta.xml
<CustomField>
    <fullName>Fear_Worst_Number__c</fullName>
    <formula>VALUE(LEFT(TEXT(Fear_Worst__c ),1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fear - Worst (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>