force-app/main/default/objects/Session_Protocol__c/fields/InView__c.field-meta.xml
<CustomField>
    <fullName>InView__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InView</label>
    <type>Checkbox</type>
</CustomField>