force-app/main/default/objects/Session_Protocol__c/fields/IsSkipped__c.field-meta.xml
<CustomField>
    <fullName>IsSkipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Protocol</label>
    <type>Checkbox</type>
</CustomField>