force-app/main/default/objects/Session_Protocol__c/fields/Manager_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Review_Notes__c</fullName>
    <label>Manager Review Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>