force-app/main/default/objects/Session_Protocol__c/fields/Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks a Session Protocol as in Need of Review</description>
    <label>Needs Review</label>
    <type>Checkbox</type>
</CustomField>