force-app/main/default/objects/Session_Protocol__c/fields/Novel_Person__c.field-meta.xml
<CustomField>
    <fullName>Novel_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Novel Person</label>
    <type>Checkbox</type>
</CustomField>