force-app/main/default/objects/Session_Protocol__c/fields/Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score__c</fullName>
    <label>Overall Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Beginning/Acquisition</fullName>
            </value>
            <value>
                <fullName>2. Catching On/ Fluency</fullName>
            </value>
            <value>
                <fullName>3. Almost There/ Generalization</fullName>
            </value>
            <value>
                <fullName>4. Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>