force-app/main/default/objects/Session_Protocol__c/fields/Overall_Score_Color__c.field-meta.xml
<CustomField>
    <fullName>Overall_Score_Color__c</fullName>
    <formula>IF(TEXT(Overall_Score__c) = &quot;1. Beginning / Acquisition&quot;, &quot;🟥&quot;, IF(TEXT(Overall_Score__c) = &quot;2. Catching On / Fluency&quot;, &quot;🟧&quot;, IF(TEXT(Overall_Score__c) = &quot;3. Almost There / Generalization&quot;, &quot;🟨&quot;, IF(TEXT(Overall_Score__c) = &quot;4. Maintenance&quot;, &quot;🟩&quot;, &quot;&quot;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Score Color</label>
    <type>Text</type>
</CustomField>