force-app/main/default/objects/Session_Protocol__c/fields/Protocol_Name__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Name__c</fullName>
    <formula>ProtocolId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Protocol Name</label>
    <type>Text</type>
</CustomField>