force-app/main/default/objects/Session_Protocol__c/fields/ProtocolId__c.field-meta.xml
<CustomField>
    <fullName>ProtocolId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Protocol</label>
    <referenceTo>Protocol__c</referenceTo>
    <relationshipLabel>Session Protocols</relationshipLabel>
    <relationshipName>Session_Protocols</relationshipName>
    <type>Lookup</type>
</CustomField>