force-app/main/default/objects/Session_Protocol__c/fields/Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Review Complete</label>
    <type>Checkbox</type>
</CustomField>