force-app/main/default/objects/Session_Protocol__c/fields/Scored_Count__c.field-meta.xml
<CustomField>
    <fullName>Scored_Count__c</fullName>
    <label>Scored Count</label>
    <summaryFilterItems>
        <field>Session_Protocol_Scale__c.Protocol_Score__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Session_Protocol_Scale__c.Required__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Session_Protocol_Scale__c.Session_Protocol__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>