force-app/main/default/objects/Session_Protocol__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>