force-app/main/default/objects/Session_Protocol__c/fields/Social_Best__c.field-meta.xml
<CustomField>
    <fullName>Social_Best__c</fullName>
    <label>Fear - Sociability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Solicitation, sustained proximity</fullName>
            </value>
            <value>
                <fullName>2. Solicitation, short proximity</fullName>
            </value>
            <value>
                <fullName>3. Solicitation, no proximity</fullName>
            </value>
            <value>
                <fullName>4. No Solicitation, sustained proxmity</fullName>
            </value>
            <value>
                <fullName>5. No Solicitation, short proximity</fullName>
            </value>
            <value>
                <fullName>6. No Solicitation, no proximity</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>