force-app/main/default/objects/Session_Protocol__c/fields/Social_Best_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Best_Number__c</fullName>
    <formula>VALUE(LEFT(TEXT(Social_Best__c ),1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Social - Best (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>