force-app/main/default/objects/Session_Protocol__c/fields/Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Solicitation__c</fullName>
    <label>Solicitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. No</fullName>
            </value>
            <value>
                <fullName>2. Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>