force-app/main/default/objects/Session_Protocol__c/fields/Solicitation_Number__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Number__c</fullName>
    <formula>VALUE(LEFT(TEXT(Solicitation__c),1))</formula>
    <label>Solicitation (Number)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>