force-app/main/default/objects/Session_Protocol__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(IsSkipped__c = TRUE, IMAGE(&quot;/resource/1635172186000/small_noentry?&quot;, &quot;Skipped&quot;), (IF(Sum_of_Numbers__c &lt; 7, IMAGE(&quot;/resource/1635172201000/small_triangle?&quot;, &quot;Not Complete&quot;) ,IMAGE(&quot;/resource/1635172164000/small_check?&quot;, &quot;Complete&quot;))))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>