force-app/main/default/objects/Session_Protocol__c/fields/Status_Text__c.field-meta.xml
<CustomField>
    <fullName>Status_Text__c</fullName>
    <formula>IF(IsSkipped__c = TRUE, &quot;Skipped&quot;, 
				(IF(Scored_Count__c &lt; Required_Count__c , &quot;Not Complete&quot; ,
					&quot;Complete&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Text</label>
    <type>Text</type>
</CustomField>