force-app/main/default/objects/Session_Protocol__c/fields/Sum_of_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Numbers__c</fullName>
    <formula>IF(ISBLANK(TEXT(Aggressive_Worst__c)), 0, 1) +
IF(ISBLANK(TEXT(Arousal_Best__c)), 0, 1) +
IF(ISBLANK(TEXT(Arousal_Worst__c)), 0, 1) +
IF(ISBLANK(TEXT(Fear_Best__c)), 0, 1) +
IF(ISBLANK(TEXT(Fear_Worst__c)), 0, 1) +
IF(ISBLANK(TEXT(Overall_Score__c)), 0, 1) +
IF(ISBLANK(TEXT(Social_Best__c)), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Numbers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>