force-app/main/default/objects/Session_Protocol__c/fields/Sum_of_Numbers_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Numbers_Rollup__c</fullName>
    <label>Sum of Numbers Rollup</label>
    <summarizedField>Session_Protocol_Scale__c.Protocol_Score_Number__c</summarizedField>
    <summaryForeignKey>Session_Protocol_Scale__c.Session_Protocol__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>