force-app/main/default/objects/Session_Protocol__c/fields/TreatmentSessionId__c.field-meta.xml
<CustomField>
    <fullName>TreatmentSessionId__c</fullName>
    <label>Treatment Session</label>
    <referenceTo>Treatment_Session__c</referenceTo>
    <relationshipLabel>Session Protocols</relationshipLabel>
    <relationshipName>Session_Protocols</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>