force-app/main/default/objects/Session_Protocol__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Protocol_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TreatmentSessionId__c</field>
        <operation>equals</operation>
        <value>000000010</value>
    </filters>
    <label>All</label>
</ListView>