force-app/main/default/objects/Session_Protocol__c/listViews/ProtocolsView.listView-meta.xml
<ListView>
    <fullName>ProtocolsView</fullName>
    <columns>ProtocolId__c</columns>
    <columns>NAME</columns>
    <columns>Overall_Score__c</columns>
    <columns>Needs_Review__c</columns>
    <columns>IsSkipped__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InView__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Protocols View</label>
</ListView>